* Changed schedule to ignore the value of interval when there are only time based builds. This should get rid of most of the "No Builder selected" messages.
* Fixed a bug where no builder was selected on a forced build if all the builders were time based.
* Fixed a bug where time builders set for midnight would build later in the day

CruiseControl Release Notes - 2.1.3

log4j.properties
----------------------
* Fixed bug where the month was being used in place of minutes.
* Now using abbreviation of month name rather than month number.

MavenBuilderTest
----------------------
* Fixed bug trying to chmod test file on unix. - Patch by Andy Nguyen

unittests.xsl & testdetails.xsl
----------------------
* Will now work with merged junitreport xml output in addition to individual xml result files. - Fixed by Jason Yip

CruiseControl Release Notes - 2.1.2

AntBuilder
----------------------
* Fixed a bug in isWindows() that was returning false negatives. This would prevent antScript from working on some Windows systems.

ArtifactsPublisher
----------------------
* Added to the default plugin registrya

build.sh
----------------------
* Fixed problem with eol characters preventing files from executing on unix systems

build.xml
----------------------
* Added ability to specify tests to run from command-line, such as "build test -Dtests=ProjectTest" - Patch by Michael Beauregard

CVSBootstrapper
----------------------
* Add -dP to update command

EmailPublisher
----------------------
* Added nested success element - Patch by Marco Faini
* Added failAsImportant attribute - Patch by Ian MacDonald

FileServlet
----------------------
* Fixed a bug, brower displaying html source code, by adding the mime-type to the response.

HtmlEmailPublisher
----------------------
* Fixed a bug where username & password were ignored

JMX
----------------------
* Now exposing Project status (read-only) in the jmx interface

log4j.properties
----------------------